--- a/package.json
+++ b/package.json
@@ -51,12 +51,14 @@
     "react-refresh": "^0.11.0",
     "react-router-dom": "^6.6.0",
     "redux": "^4.2.0",
+    "redux-thunk": "^2.4.2",
     "resolve": "^1.20.0",
     "resolve-url-loader": "^4.0.0",
     "sass-loader": "^12.3.0",
     "semver": "^7.3.5",
     "source-map-loader": "^3.0.0",
     "style-loader": "^3.3.1",
+    "styled-components": "^5.3.6",
     "tailwindcss": "^3.0.2",
     "terser-webpack-plugin": "^5.2.5",
     "web-vitals": "^2.1.4",
