--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@ant-design/icons": "^4.8.0",
     "@babel/core": "^7.16.0",
     "@craco/craco": "^7.0.0",
     "@pmmmwh/react-refresh-webpack-plugin": "^0.5.3",
