--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "case-sensitive-paths-webpack-plugin": "^2.4.0",
     "classnames": "^2.3.2",
     "craco-less": "^2.1.0-alpha.0",
+    "crypto-js": "^4.1.1",
     "css-loader": "^6.5.1",
     "css-minimizer-webpack-plugin": "^3.2.0",
     "dayjs": "^1.11.7",
@@ -33,6 +34,7 @@
     "eslint-webpack-plugin": "^3.1.1",
     "file-loader": "^6.2.0",
     "fs-extra": "^10.0.0",
+    "history": "^5.3.0",
     "html-webpack-plugin": "^5.5.0",
     "http-proxy-middleware": "^2.0.6",
     "identity-obj-proxy": "^3.0.0",
